# franka_dual_arm

./: CMakeLists.txt  log_left.txt  log_right.txt  read_and_plot_logs.py
include/: logger.h
src/: commands.cpp  dual_arm.cpp  server.cpp
traj/: traj_left_short.txt  traj_right_short.txt
